--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "agenda-virtual",
   "private": true,
@@ -20,6 +19,7 @@
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
+    "@types/node": "^25.0.7",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.1",
